# game-engine

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Camera.cpp  Camera.h  shaderClass.cpp  texture.cpp  texture.h
src/engine/MeshLoader/: CMakeLists.txt  OBJParser.cpp  OBJParser.h  Parser.cpp  Parser.h
src/engine/util/parsers/: AbstractMeshParser.h  OBJParser.h
src/lib/: glad.c  glad.h
src/shaders/: default.frag  default.vert
